# kumi

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  annotated.html  annotated_dup.js  appveyor.yml  changelog.html  classes.html  conceptkumi_1_1___1_1contiguous__container__like.html  conceptkumi_1_1___1_1std__tuple__compatible.html  conceptkumi_1_1compatible__product__types.html  conceptkumi_1_1concepts_1_1compatible__product__types.html  conceptkumi_1_1concepts_1_1container.html  conceptkumi_1_1concepts_1_1contains__field.html  conceptkumi_1_1concepts_1_1contains__identifier.html  conceptkumi_1_1concepts_1_1contains__label.html  conceptkumi_1_1concepts_1_1contains__type.html  conceptkumi_1_1concepts_1_1empty__product__type.html  conceptkumi_1_1concepts_1_1entirely__uniquely__named.html  conceptkumi_1_1concepts_1_1equality__comparable.html  conceptkumi_1_1concepts_1_1equivalent.html  conceptkumi_1_1concepts_1_1field.html  conceptkumi_1_1concepts_1_1follows__same__semantic.html  conceptkumi_1_1concepts_1_1fully__named.html  conceptkumi_1_1concepts_1_1has__named__fields.html  conceptkumi_1_1concepts_1_1homogeneous__product__type.html  conceptkumi_1_1concepts_1_1identifier.html  conceptkumi_1_1concepts_1_1index.html  conceptkumi_1_1concepts_1_1index__map.html  conceptkumi_1_1concepts_1_1indexer.html  conceptkumi_1_1concepts_1_1is__fully__named.html  conceptkumi_1_1concepts_1_1labeled__get__compliant.html  conceptkumi_1_1concepts_1_1monoid.html  conceptkumi_1_1concepts_1_1named__equality__comparable.html  conceptkumi_1_1concepts_1_1named__get__compliant.html  conceptkumi_1_1concepts_1_1non__empty__product__type.html  (+995 more)
test/: CMakeLists.txt  access.cpp  adapt.cpp  aggregate_ctor.cpp  apply.cpp  as_flat.cpp  as_flat_ptr.cpp  as_tuple.cpp  cartesian_product.cpp  cat.cpp  concepts.cpp  convert.cpp  doc.cmake  extract.cpp  flatten.cpp  fold.cpp  for_each.cpp  forward_as_tuple.cpp  generate.cpp  iota.cpp  locate.cpp  make_tuple.cpp  map.cpp  map_index.cpp  max.cpp  min.cpp  predicates.cpp  push_pop.cpp  reorder.cpp  split.cpp  test.hpp  tie.cpp  to_ref.cpp  transpose.cpp  unit.cmake  zip.cpp
test/device/: device.cu
test/doc/: adapt.cpp  all_of.cpp  all_unique.cpp  any_of.cpp  apply.cpp  as_flat_ptr.cpp  as_streamable.cpp  as_tuple.cpp  back-front.cpp  bit_and.cpp  bit_or.cpp  bit_xor.cpp  cartesian_product.cpp  cast.cpp  cat.cpp  chunks.cpp  count.cpp  count_if.cpp  exclusive_scan_left.cpp  exclusive_scan_right.cpp  extract.cpp  fill.cpp  filter.cpp  filter_not.cpp  flatten.cpp  flatten_all.cpp  fold_left.cpp  fold_right.cpp  for_each.cpp  for_each_index.cpp  forward_as_tuple.cpp  from_tuple.cpp  generate.cpp  get.cpp  inclusive_scan_left.cpp  inclusive_scan_right.cpp  index.cpp  inner_product.cpp  iota.cpp  locate.cpp  (+49 more)
test/doc/infra/: as.cpp  as_streamable.cpp  capture_field.cpp  checked.cpp  containers.cpp  field_cast.cpp  field_value_of.cpp  flag.cpp  identifier_of.cpp  label.cpp  label_of.cpp  members_of.cpp  name.cpp  name_of.cpp  named_get_udt.cpp  only.cpp  projections.cpp  regular.cpp  to_str.cpp  typed_get_udt.cpp  values_of.cpp
test/doc/record/: adapt.cpp  apply.cpp  cartesian_product.cpp  cat.cpp  chunks.cpp  extract.cpp  filter.cpp  filter_not.cpp  flatten.cpp  flatten_all.cpp  fold_left.cpp  fold_right.cpp  for_each.cpp  for_each_field.cpp  forward_as_record.cpp  from_record.cpp  get.cpp  inner_product.cpp  locate.cpp  make_record.cpp  map_field.cpp  named_get.cpp  named_subscript.cpp  partition.cpp  prod.cpp  push_back.cpp  push_front.cpp  reorder.cpp  reorder_fields.cpp  reverse.cpp  rotate_left.cpp  rotate_right.cpp  split.cpp  subscript.cpp  tie.cpp  to_record.cpp  to_ref.cpp  transpose.cpp  windows.cpp
test/doc/record/algo/: all_of.cpp  all_unique.cpp  any_of.cpp  apply.cpp  as_flat_ptr.cpp  back-front.cpp  bit_and.cpp  bit_or.cpp  bit_xor.cpp  cartesian_product.cpp  cat.cpp  chunks.cpp  compress.cpp  contains.cpp  contains_any.cpp  contains_none.cpp  contains_only.cpp  count.cpp  count_if.cpp  exclusive_scan_left.cpp  exclusive_scan_right.cpp  extract.cpp  filter.cpp  filter_not.cpp  flatten.cpp  flatten_all.cpp  fold_left.cpp  fold_right.cpp  for_each.cpp  for_each_field.cpp  inclusive_scan_left.cpp  inclusive_scan_right.cpp  inner_product.cpp  (+33 more)
test/integration/: CMakeLists.txt  main.cpp
test/integration/cpm-test/: CMakeLists.txt
test/integration/fetch-test/: CMakeLists.txt
test/integration/install-test/: CMakeLists.txt
test/standalone/: main.cpp
test/tts/: tts.hpp
test/unit/: access.cpp  adapt.cpp  aggregate_ctor.cpp  apply.cpp  apply_traits.cpp  as_flat_ptr.cpp  back_front.cpp  builder.cpp  cartesian_product.cpp  cat.cpp  chunks.cpp  common_reference.cpp  concepts.cpp  convert.cpp  extract.cpp  field_capture.cpp  fill.cpp  filter.cpp  filter_not.cpp  flatten.cpp  fold.cpp  for_each.cpp  forward_as_tuple.cpp  generate.cpp  inner_product.cpp  iota.cpp  is_homogeneous.cpp  locate.cpp  make_streamable.cpp  make_tuple.cpp  map.cpp  map_index.cpp  map_traits.cpp  max.cpp  member_capture.cpp  member_cast.cpp  min.cpp  partition.cpp  predicates.cpp  product_type_cast.cpp  (+20 more)
test/unit/infra/: common_reference.cpp  concepts.cpp  containers.cpp  field.cpp  get_helper.cpp  identifier.cpp  make_streamable.cpp  projection_map.cpp  std_type_traits.cpp  str.cpp
test/unit/record/: EBO.cpp  access.cpp  aggregate_ctor.cpp  apply.cpp  back_front.cpp  cartesian_product.cpp  cat.cpp  convert.cpp  extract.cpp  filter.cpp  filter_not.cpp  flatten.cpp  fold.cpp  for_each.cpp  forward_as_record.cpp  inner_product.cpp  locate.cpp  make_record.cpp  make_streamable.cpp  map.cpp  map_field.cpp  max.cpp  member_cast.cpp  min.cpp  partition.cpp  predicates.cpp  product_type_cast.cpp  push_pop.cpp  reduce.cpp  reorder.cpp  reverse.cpp  rotate_left.cpp  rotate_right.cpp  split.cpp  to_ref.cpp  transpose.cpp  type_cast.cpp  zip.cpp
test/unit/std/: std.cpp
test/unit/tuple/: EBO.cpp  cat.cpp  common_reference.cpp  field_capture.cpp  filter_not.cpp  map.cpp  protocol.cpp  reindex.cpp  std_type_traits.cpp  transpose.cpp
(+693 files in other folders)
